@@ -132,7 +132,11 @@ test {
     
     jvmArgs(
             '--module-path', classpath.asPath,
-            '--add-modules', 'ALL-MODULE-PATH'
+            '--add-modules', 'ALL-MODULE-PATH',
+            '--add-opens', 'cpw.mods.modlauncher/cpw.mods.modlauncher=powermock.reflect',
+            '--add-opens', 'java.base/java.lang=powermock.reflect',
+            '--add-opens', 'cpw.mods.securejarhandler/cpw.mods.cl=powermock.reflect',
+            '--add-reads', 'cpw.mods.modlauncher=cpw.mods.modlauncher.test'
     )
 }
 
